# host-based-intrusion-detection-lab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_COMPLETION_CHECKLIST.md  README.md  RELEASE.md  TESTING_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
baselines/: example_baseline.json
docs/: DETECTION_STRATEGY.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  SAFETY.md  SAMPLE_DATA.md  TESTING_GUIDE.md  TRIAGE_GUIDE.md
reports/examples/: combined_lab_report.json  combined_lab_report.md  events_suspicious_report.md  fim_clean_report.md
samples/files/clean/: app_settings.json  config.txt  notes.txt
samples/files/modified/: app_settings.json  config.txt  notes.txt
samples/files/new/: notes.txt
samples/host_events/: clean_events.json  false_positive_events.json  malformed_events.json  mixed_events.csv  suspicious_events.json
scripts/: check-docs.py
src/hids_lab/: __init__.py  __main__.py  alerts.py  baseline.py  cli.py  detections.py  events.py  fim.py  reports.py  safety.py  suppressions.py
suppressions/: example_suppressions.json
tests/: __init__.py  test_baseline.py  test_cli.py  test_cli_events.py  test_cli_phase3.py  test_detections.py  test_documentation_consistency.py  test_events.py  test_fim.py  test_package.py  test_quality_negative.py  test_reports.py  test_safety.py  test_suppressions.py  test_validation_edges.py  test_workflows.py
